<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/search_edit_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="100dp"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.LinearLayoutCompat
...
