...
    <string name="student_spots_string">Student Spots</string>
    <string name="about_string">About</string>
    <string name="open_drawer">Open sesame</string>
    <string name="close_drawer">Goodnight sweet prince</string>
    <string name="username">Dr. Nikolaos Tsantalis</string>
    <string name="email">nikolaos.tsantalis@concordia.ca</string>
    <string name="button_SGW">SGW</string>
    <string name="button_loyola">LOY</string>
    <string name="location_string">Location:</string>
    <string name="destination_string">Destination:</string>
    <string name="action_settings">Settings</string>
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>
    <string name="BottomSheetBuildingInfo">com.concordia.mcga.bottomsheet.BottomSheet</string>
    <string name="my_location_string">My Location</string>
...
