...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/mapCenterButton"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/campusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="switchCampus" />
    </RelativeLayout>
...
